created java classes needed for the database and recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".NewJourneyActivity"
             android:exported="false" />
         <activity
-            android:name=".RecyclerActivity"
+            android:name=".JourneyAlbumRecyclerActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
