--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:exported="false" />
         <activity
             android:name=".NewJournalDetailActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="false" />
         <activity
             android:name=".NewJourneyActivity"
@@ -35,6 +36,14 @@
         <activity
             android:name=".CameraActivity"
             android:exported="false" />
+        <activity android:name=".ViewImagesActivity"
+            android:exported="false">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
         <activity
             android:name=".UserSettings"
             android:exported="false" />
