not using recycler view anymore, only one image to capture and view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature android:name="android.hardware.camera.any" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,6 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JourneyJournals"
         tools:targetApi="31">
+
         <activity
             android:name=".ChecklistActivity"
             android:exported="false" />
@@ -35,9 +37,9 @@
         <activity
             android:name=".JourneyAlbumRecyclerActivity"
             android:exported="false" />
-        <activity
-            android:name=".CameraActivity"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".CameraActivity"-->
+<!--            android:exported="false" />-->
         <activity android:name=".ViewImagesActivity"
             android:exported="false">
 <!--            <intent-filter>-->
@@ -58,6 +60,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.android.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
     </application>
 
 </manifest>
